update gitignore to ignore .blend1 files

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ ExportedObj/
 *.pdb.meta
 *.mdb.meta
 
+# Blender backup files
+*.blend1
+
 # Unity3D generated file on crash reports
 sysinfo.txt
 
