update gitignore to ignore other format of musescore autosaves

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ ExportedObj/
 
 #MuseScore backup files and artifacts
 **/.mscbackup/
+*.mscz.autosave
 **/ArtWorkplace/MuseScore/**/*.ogg
 **/ArtWorkplace/MuseScore/**/*.mp3
 **/ArtWorkplace/MuseScore/**/*.wav
