fix bachelor thesis builder action

--- a/.github/workflows/build_thesis.yml
+++ b/.github/workflows/build_thesis.yml
@@ -13,12 +13,12 @@ jobs:
           ref: "thesis-text"
           path: "."
       - run: sudo apt install make texlive-full -y
-      - run: cd cs ; make
+      - run: cd cs ; make ; cd ..
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token:  "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "Latest Build"
+          automatic_release_tag: "Thesis"
           prerelease: false
           files: |
-            ~/cs/abstrakt.pdf
-            ~/cs/prace.pdf
+            ./cs/abstrakt.pdf
+            ./cs/prace.pdf
