migrated from natbib to biblatex

--- a/cs/Makefile
+++ b/cs/Makefile
@@ -5,7 +5,7 @@ all: prace.pdf abstrakt.pdf
 # LaTeX je potreba spustit nekolikrat, aby spravne spocital odkazy
 prace.pdf: prace.tex $(wildcard *.tex) literatura.bib prace.xmpdata
 	pdflatex $<
-	bibtex prace
+	biber prace
 	pdflatex $<
 	pdflatex $<
 
