--- a/.github/workflows/build_thesis.yml
+++ b/.github/workflows/build_thesis.yml
@@ -14,9 +14,7 @@ jobs:
           path: "."
       - uses: xu-cheng/texlive-action/full@v1
         with:
-          run: |
-            cd cs ; make ; cd ..
-            :
+          run: cd cs ; make ; cd ..
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token:  "${{ secrets.GITHUB_TOKEN }}"
