--- a/.github/workflows/build_game.yml
+++ b/.github/workflows/build_game.yml
@@ -80,7 +80,7 @@ jobs:
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "Game (Latest nightly)"
+          automatic_release_tag: "Game--Latest-nightly"
           prerelease: false
           files: |
             zips/Windows64.zip
